Alpha 2.3.0  Updated Alex's Mobs           1.8.1    -> 1.9.1  Updated Architectury API      1.10.139 -> 1.12.145  Updated Artifacts             2.8.3    -> 2.8.4  Updated Better Biome Blend    1.1.3    -> 1.1.4  Updated Cloth Config API      4.11.18  -> 4.11.19  Updated Collective            2.25     -> 2.26  Updated Controlling           7.0.0.14 -> 7.0.0.15  Updated Create                0.3.1    -> 0.3.1c  Updated Curios API            4.0.5.0  -> 4.0.5.1  Updated Dungeons Plus         1.1.3    -> 1.1.4  Updated Elenai Dodge 2        1.0.9    -> 1.0.9b  Updated Farmer's Delight      0.4      -> 0.4.1  Updated FerriteCore           2.0.3    -> 2.0.4  Updated FPS Reducer           1.18     -> 1.19  Updated Just Enough Items     7.6.1.75 -> 7.6.4.87  Updated Placebo               4.4.1    -> 4.4.2  Updated Quark                 r2.4-309 -> r2.4-311  Updated Repurposed Structures 2.5.1    -> 2.6.5  Updated Structure Gel API     1.7.5    -> 1.7.7  Updated YUNG's API            forge-4  -> forge-6

--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -21,6 +21,8 @@
 	"Use Fast Worldgen" = false
 	#Quark replaces the Piston logic to allow for its piston features to work. If you're having troubles, try turning this off.
 	"Use Piston Logic Replacement" = true
+	#Allowed values: (0,)
+	"Advancement Visibility Depth" = 2
 
 [categories]
 	Automation = true
