--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -42,10 +42,10 @@
 	Chute = true
 	"Color Slime" = true
 	"Dispensers Place Blocks" = true
-	"Ender Watcher" = true
+	"Ender Watcher" = false
 	"Endermites Form Shulkers" = true
 	"Feeding Trough" = true
-	Gravisand = true
+	Gravisand = false
 	"Iron Rod" = true
 	"Metal Buttons" = true
 	"Obsidian Plate" = true
@@ -217,11 +217,11 @@
 [management]
 	"Chests In Boats" = true
 	"Easy Transfering" = true
-	"Hotbar Changer" = true
+	"Hotbar Changer" = false
 	"Inventory Sorting" = true
 	"Item Sharing" = true
 	"Right Click Armor" = true
-	"Shulker Box Right Click" = true
+	"Shulker Box Right Click" = false
 
 	[management.easy_transfering]
 		"Enable Shift Lock" = true
@@ -238,11 +238,11 @@
 
 [tools]
 	"Ancient Tomes" = true
-	"Bottled Cloud" = true
+	"Bottled Cloud" = false
 	Camera = true
 	"Color Runes" = true
 	"Pathfinder Maps" = true
-	Pickarang = true
+	Pickarang = false
 	"Seed Pouch" = true
 	"Slime In A Bucket" = true
 	Trowel = true
@@ -319,7 +319,7 @@
 	[tools.seed_pouch]
 		"Max Items" = 640
 		"Shift Range" = 3
-		"Show All Variants In Creative" = true
+		"Show All Variants In Creative" = false
 
 	[tools.trowel]
 		#Amount of blocks placed is this value + 1. Default is 255 (4 stacks).
@@ -338,14 +338,14 @@
 	"Dragon Scales" = true
 	Emotes = true
 	"Enhanced Ladders" = true
-	"Glass Shard" = true
+	"Glass Shard" = false
 	"Hoe Harvesting" = true
 	"Improved Sleeping" = true
 	"Infinity Bucket" = true
 	"Lock Rotation" = true
 	"Note Block Mob Sounds" = true
 	"Pat The Dogs" = true
-	"Poison Potato Usage" = true
+	"Poison Potato Usage" = false
 	"Reacharound Placing" = true
 	"Replace Scaffolding" = true
 	"Sign Editing" = true
@@ -467,7 +467,7 @@
 [world]
 	"Big Dungeon" = true
 	"Big Stone Clusters" = true
-	Biotite = true
+	Biotite = false
 	"Blossom Trees" = true
 	"Brimstone Underground Biome" = true
 	"Cave Crystal Underground Biome" = true
@@ -489,7 +489,7 @@
 	"Slime Underground Biome" = true
 	Speleothems = true
 	"Spider Nest Underground Biome" = true
-	"Spiral Spires" = true
+	"Spiral Spires" = false
 	"Underground Clay" = true
 
 	[world.big_dungeon]
@@ -1747,7 +1747,7 @@
 	"Game Nerfs" = true
 	"Narrator Readout" = false
 	"Overlay Shader" = false
-	Shiba = false
+	Shiba = true
 
 	[experimental.adjustable_chat]
 		"Horizontal Shift" = 0
@@ -1769,7 +1769,7 @@
 		"Disable Wool Drops" = true
 		#Makes Mending act like the Unmending mod
 		#https://www.curseforge.com/minecraft/mc-mods/unmending
-		"Nerf Mending" = false
+		"Nerf Mending" = true
 		#Resets all villager discounts when zombified to prevent reducing prices to ridiculous levels
 		"Nerf Villager Discount" = true
 
