--- a/config/elenaidodge2-common.toml
+++ b/config/elenaidodge2-common.toml
@@ -28,7 +28,7 @@
 	#How many half feathers dodging requires.
 	#Range: 0 ~ 20
 	cost = 2
-	#The amount of ticks required to regenerate half a feather.
+	#The amount of ticks required to regenerate half a feather. Please only change this when you have full feathers.
 	#Range: > 1
 	regen_rate = 80
 	#Whether to enable 'Half Feathers'. Instead of weight values rounding down, they will instead show as a half feather. These can be used if the 'Cost' value is set to an odd number.
