Tweaked Better Strongholds and Quark configs

--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -129,7 +129,7 @@
 	"Wooden Posts" = true
 	Hedges = true
 	Stools = true
-	"Celebratory Lamps" = true
+	"Celebratory Lamps" = false
 
 	[building.compressed_blocks]
 		#Allowed values: [0,)
