Cleanup old configs

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -6,7 +6,6 @@ Dash
 Ensorcellation
 Farmer's Delight
 Leap
-Scuba Gear
 Serene Seasons
 Structure Gel API
 The Conjurer
@@ -14,7 +13,6 @@ Wall-Jump!
 Alex's Mobs
 Create
 Artifacts
-Brazier
 Curios API
 Tool Belt
 Charm
@@ -39,4 +37,4 @@ Bayou Blues
 Allurement
 Momentum
 Shulker Enchantments
-Mowzie's Mobs
+Seeker Compass
