--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -16,7 +16,6 @@ create:automatic_packing
 create:automatic_shaped
 create:automatic_shapeless
 create:block_cutting
-create:blockzapper_upgrade
 create:crushing
 create:draining
 create:fan_blasting
@@ -36,3 +35,7 @@ charm:firing
 charm:woodcutting
 environmental:baking
 environmental:sawing
+create:deploying
+create:sequenced_assembly
+create:wood_cutting
+waystones:warp_plate
