--- a/manifest.json
+++ b/manifest.json
@@ -201,6 +201,11 @@
       "required": true
     },
     {
+      "projectID": 314906,
+      "fileID": 3389752,
+      "required": true
+    },
+    {
       "projectID": 316881,
       "fileID": 3175855,
       "required": true
@@ -311,6 +316,11 @@
       "required": true
     },
     {
+      "projectID": 367706,
+      "fileID": 3369039,
+      "required": true
+    },
+    {
       "projectID": 368293,
       "fileID": 3386058,
       "required": true
@@ -413,6 +423,16 @@
     {
       "projectID": 404465,
       "fileID": 3373833,
+      "required": true
+    },
+    {
+      "projectID": 404468,
+      "fileID": 3373835,
+      "required": true
+    },
+    {
+      "projectID": 410295,
+      "fileID": 3279152,
       "required": true
     },
     {
