--- a/config/charm-common.toml
+++ b/config/charm-common.toml
@@ -51,7 +51,7 @@
 #Glowballs can be thrown to produce a light source where they impact.
 "Glowballs enabled" = true
 #Gold variant of vanilla iron bars.
-"GoldBars enabled" = true
+"GoldBars enabled" = false
 #Gold version of the vanilla chain.
 "GoldChains enabled" = true
 #Gold version of the vanilla lanterns.
@@ -118,15 +118,15 @@
 #As long as a Totem of Undying is in your inventory, it will be consumed to protect you from death.
 "UseTotemFromInventory enabled" = true
 #Barrels available in all types of vanilla wood.
-"VariantBarrels enabled" = true
+"VariantBarrels enabled" = false
 #Bookshelves available in all types of vanilla wood.
-"VariantBookshelves enabled" = true
+"VariantBookshelves enabled" = false
 #Chests available in all types of vanilla wood.
-"VariantChests enabled" = true
+"VariantChests enabled" = false
 #Ladders available in all types of vanilla wood.
-"VariantLadders enabled" = true
+"VariantLadders enabled" = false
 #Mobs may spawn with different textures.
-"VariantMobTextures enabled" = true
+"VariantMobTextures enabled" = false
 #Villagers are attracted when the player holds a block of emeralds.
 "VillagersFollowEmeraldBlocks enabled" = true
 #Wandering traders only appear near signal campfires and sell maps to biomes and structures.
@@ -404,15 +404,15 @@
 
 [ExtraRecipes]
 	#If true, adds a recipe for Gilded Blackstone using gold nuggets and blackstone.
-	"Gilded Blackstone" = true
+	"Gilded Blackstone" = false
 	#If true, adds a recipe for the Trident using prismarine shards and crystals.
-	Trident = true
+	Trident = false
 	#If true, adds a recipe for Cyan Dye using warped roots.
-	"Cyan Dye" = true
+	"Cyan Dye" = false
 	#If true, adds a recipe for Green Dye using yellow and blue dyes.
-	"Green Dye" = true
+	"Green Dye" = false
 	#If true, adds a recipe for Soul Torches using soul sand/soul soil and sticks.
-	"Soul Torch" = true
+	"Soul Torch" = false
 
 [FeatherFallingCrops]
 	#Turn this off to prevent trampling even when the player does not wear feather falling boots.
